--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,21 @@
+decorator==3.4.2
 dj-database-url==0.3.0
 Django==1.8.2
 django-postgrespool==0.3.0
 gunicorn==19.3.0
+matplotlib==1.4.3
+mock==1.0.1
+networkx==1.9.1
+nose==1.3.7
+numpy==1.9.2
+Pillow==2.8.2
 psycopg2==2.6
+pyparsing==2.0.3
+python-dateutil==2.4.2
+pytz==2015.4
+scikit-image==0.11.3
+scipy==0.15.1
+six==1.9.0
 SQLAlchemy==1.0.4
 wheel==0.24.0
 whitenoise==1.0.6
